DPRO-408: fixed styling: comment spacing

--- a/src/main/webapp/WEB-INF/themes/desktop/sass/pages/_article.scss
+++ b/src/main/webapp/WEB-INF/themes/desktop/sass/pages/_article.scss
@@ -716,7 +716,7 @@ body.article .ui-widget-overlay {
 
     li {
       margin-left: 0;
-      padding-bottom: rem-calc(7); // TEMP PROD: change to $pad-xsmall (p has 5px)
+      padding-bottom: rem-calc(12);
     }
 
     a {
